add settings (projects and hosts)
