# internal/model/http.go
@@ -1,0 +1,9 @@
+package model
+
+type HttpError struct {
+	Message string `json:"message"`
+}
+
+type SuccessMessage struct {
+	Message string `json:"message"`
+}
